--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<img style="background-image:url(images/amlogo.jpg)" src="images/x.gif" width="240" height="130" alt="Altervision Media" />
 		</div>
 		<ul id="nav">
-			<li><a href="about/">About</a></li>
+			<li><a href="about/">About us</a></li>
 			<li><a href="services/">Services</a></li>
 			<li><a href="works/">Works</a></li>
 			<li><a href="contact/">Contact</a></li>
@@ -48,13 +48,12 @@
 		<ul class="fmenu">
 			<li><a href="contact/">Contact</a></li>
 			<li><span>|</span></li>
-			<li><a href="privacy/">Privacy</a></li>
+			<li><a href="#">Privacy</a></li>
 			<li><span>|</span></li>
-			<li><a href="sitemap/">Site Map</a></li>
+			<li><a href="#">Site Map</a></li>
 			<li><span>|</span></li>
-			<li><img class="ico" src="images/ico_rss.gif" width="16" height="16" alt="RSS 2.0" /><a href="news/feed.xml">RSS</a></li>
+			<li><img class="ico" src="images/ico_rss.gif" width="16" height="16" alt="RSS 2.0" /><a href="#">RSS</a></li>
 		</ul>
-		<div id="apl"><a href="tea/"><img src="images/greentealeaf.gif" width="45" height="45" alt="Just a green tea leaf" /></a></div>
 		<p>
 			<a href="http://validator.w3.org/check/referer">XHTML</a>,
 			<a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>.
