--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
 		</div>
 		<ul id="nav">
 			<li><a href="../">Home</a></li>
-			<li><span>About</span></li>
+			<li><span>About us</span></li>
 			<li><a href="../services/">Services</a></li>
 			<li><a href="../works/">Works</a></li>
 			<li><a href="../contact/">Contact</a></li>
@@ -26,20 +26,19 @@
 		<div id="aboutimg"><div></div></div>
 		<div style="padding:0 12px; text-align:left">
 			<p>
-				We like to design graphic identity and create beautiful websites.
+				We like to design graphic identity and create great websites.
 			</p>
 			<p style="margin-bottom:6px">
 				Altervision Media is
 			</p>
 			<ul id="fts">
-				<li>Identity and Illustration</li>
-				<li>Interfaces and Designs</li>
-				<li>Web Coding</li>
-				<li>CMS Preference</li>
+				<li>Graphic design</li>
+				<li>Web design and interfaces</li>
+				<li>Web development</li>
+				<li>CMS and web hosting set-up</li>
 			</ul>
 			<p>
-				We&#180;re experienced in working with
-				customers from all over the world.
+				We work with customers from all over the world.
 			</p>
 		</div>
 	</div>
@@ -48,19 +47,18 @@
 		<ul class="fmenu">
 			<li><a href="../contact/">Contact</a></li>
 			<li><span>|</span></li>
-			<li><a href="../privacy/">Privacy</a></li>
+			<li><a href="#">Privacy</a></li>
 			<li><span>|</span></li>
-			<li><a href="../sitemap/">Site Map</a></li>
+			<li><a href="#">Site Map</a></li>
 			<li><span>|</span></li>
-			<li><img class="ico" src="../images/ico_rss.gif" width="16" height="16" alt="RSS 2.0" /><a href="../news/feed.xml">RSS News Feed</a></li>
+			<li><img class="ico" src="../images/ico_rss.gif" width="16" height="16" alt="RSS 2.0" /><a href="#">RSS News Feed</a></li>
 		</ul>
 		<p id="cr">
 			&copy; 2008 <a href="../">Altervision Media</a>. All rights reserved.
 		</p>
-		<div id="apl"><a href="../tea/"><img src="../images/greentealeaf.gif" width="45" height="45" alt="Just a green tea leaf" /></a></div>
 		<p>
-			Valid <a href="http://validator.w3.org/check/referer">XHTML</a>,
-			<a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>.
+			Valid <a href="http://validator.w3.org/check/referer">XHTML</a>
+			<a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>
 		</p>
 	</div>
 	
