--- a/services/index.html
+++ b/services/index.html
@@ -19,7 +19,7 @@
 		</div>
 		<ul id="nav">
 			<li><a href="../">Home</a></li>
-			<li><a href="../about">About</a></li>
+			<li><a href="../about">About us</a></li>
 			<li><span>Services</span></li>
 			<li><a href="../works/">Works</a></li>
 			<li><a href="../contact/">Contact</a></li>
@@ -32,8 +32,7 @@
 			<td class="srvlst">
 				<h2>Web Design</h2>
 				<ul>
-					<li>Interfaces</li>
-					<li>Web Coding</li>
+					<li>Websites</li>
 					<li>Development</li>
 					<li>CMS</li>
 				</ul>
@@ -45,7 +44,7 @@
 			<td class="srvlst">
 				<h2>Business Identity</h2>
 				<ul>
-					<li>Logotype Design</li>
+					<li>Logotypes</li>
 					<li>Branding</li>
 					<li>Style Guides</li>
 				</ul>	
@@ -72,16 +71,15 @@
 		<ul class="fmenu">
 			<li><a href="../contact/">Contact</a></li>
 			<li><span>|</span></li>
-			<li><a href="../privacy/">Privacy</a></li>
+			<li><a href="#">Privacy</a></li>
 			<li><span>|</span></li>
-			<li><a href="../sitemap/">Site Map</a></li>
+			<li><a href="#">Site Map</a></li>
 			<li><span>|</span></li>
-			<li><img class="ico" src="../images/ico_rss.gif" width="16" height="16" alt="RSS 2.0" /><a href="../news/feed.xml">RSS News Feed</a></li>
+			<li><img class="ico" src="../images/ico_rss.gif" width="16" height="16" alt="RSS 2.0" /><a href="#">RSS</a></li>
 		</ul>
 		<p id="cr">
 			&copy; 2008 <a href="../">Altervision Media</a>. All rights reserved.
 		</p>
-		<div id="apl"><a href="../tea/"><img src="../images/greentealeaf.gif" width="45" height="45" alt="Just a green tea leaf" /></a></div>
 		<p>
 			Valid <a href="http://validator.w3.org/check/referer">XHTML</a>, 
 			<a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>.
