--- a/about/index.html
+++ b/about/index.html
@@ -51,7 +51,7 @@
 			<li><span>|</span></li>
 			<li><a href="#">Site Map</a></li>
 			<li><span>|</span></li>
-			<li><img class="ico" src="../images/ico_rss.gif" width="16" height="16" alt="RSS 2.0" /><a href="#">RSS News Feed</a></li>
+			<li><img class="ico" src="../images/ico_rss.gif" width="16" height="16" alt="RSS 2.0" /><a href="#">RSS</a></li>
 		</ul>
 		<p id="cr">
 			&copy; 2008 <a href="../">Altervision Media</a>. All rights reserved.
