--- a/services/index.html
+++ b/services/index.html
@@ -77,12 +77,9 @@
 			<li><span>|</span></li>
 			<li><img class="ico" src="../images/ico_rss.gif" width="16" height="16" alt="RSS 2.0" /><a href="#">RSS</a></li>
 		</ul>
-		<p id="cr">
-			&copy; 2008 <a href="../">Altervision Media</a>. All rights reserved.
-		</p>
 		<p>
-			Valid <a href="http://validator.w3.org/check/referer">XHTML</a>, 
-			<a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>.
+			<a href="http://validator.w3.org/check/referer">XHTML</a>
+			<a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>
 		</p>
 	</div>
 	
