--- a/works/index.html
+++ b/works/index.html
@@ -15,11 +15,11 @@
 <center>
 	<div id="header">
 		<div id="logo">
-			<a href="../"><img src="../images/x.gif" width="219" height="139" alt="Altervision Media" /></a>
+			<a href="../"><img src="../images/x.gif" width="219" height="139" alt="Altervision Media"/></a>
 		</div>
 		<ul id="nav">
 			<li><a href="../">Home</a></li>
-			<li><a href="../about">About</a></li>
+			<li><a href="../about">About us</a></li>
 			<li><a href="../services/">Services</a></li>
 			<li><span>Works</span></li>
 			<li><a href="../contact/">Contact</a></li>
@@ -47,18 +47,14 @@
 		<ul class="fmenu">
 			<li><a href="../contact/">Contact</a></li>
 			<li><span>|</span></li>
-			<li><a href="../privacy/">Privacy</a></li>
+			<li><a href="#">Privacy</a></li>
 			<li><span>|</span></li>
-			<li><a href="../sitemap/">Site Map</a></li>
+			<li><a href="#">Site Map</a></li>
 			<li><span>|</span></li>
-			<li><img class="ico" src="../images/ico_rss.gif" width="16" height="16" alt="" /><a href="../news/feed.xml">RSS News Feed</a></li>
+			<li><img class="ico" src="../images/ico_rss.gif" width="16" height="16" alt="" /><a href="#">RSS</a></li>
 		</ul>
-		<p id="rc">
-			&copy; 2008 <a href="../">Altervision Media</a>. All rights reserved.
-		</p>
-		<div id="apl"><a href="../tea/"><img src="../images/greentealeaf.gif" width="45" height="45" alt="Just a green tea leaf" /></a></div>
 		<p>
-			Valid <a href="http://validator.w3.org/check/referer">XHTML</a>,
+			<a href="http://validator.w3.org/check/referer">XHTML</a>,
 			<a title="Validate" href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>.
 		</p>
 	</div>
