--- a/works/all/index.html
+++ b/works/all/index.html
@@ -21,7 +21,7 @@
 			</div>
 			<ul id="nav">
 				<li><a href="../../">Home</a></li>
-				<li><a href="../../about">About</a></li>
+				<li><a href="../../about">About us</a></li>
 				<li><a href="../../services/">Services</a></li>
 				<li><a href="../../works/">Works</a></li>
 				<li><a href="../../contact/">Contact</a></li>
@@ -84,19 +84,15 @@
 		<ul class="fmenu">
 			<li><a href="../../contact/">Contact</a></li>
 			<li><span>|</span></li>
-			<li><a href="../../privacy/">Privacy</a></li>
+			<li><a href="#">Privacy</a></li>
 			<li><span>|</span></li>
-			<li><a href="../../sitemap/">Site Map</a></li>
+			<li><a href="#">Site Map</a></li>
 			<li><span>|</span></li>
-			<li><img class="ico" src="../../images/ico_rss.gif" width="16" height="16" alt="" /><a href="../news/feed.xml">RSS News Feed</a></li>
+			<li><img class="ico" src="../../images/ico_rss.gif" width="16" height="16" alt="" /><a href="#">RSS</a></li>
 		</ul>
-		<p id="rc">
-			&copy; 2008 <a href="../../">Altervision Media</a>. All rights reserved.
-		</p>
-		<div id="apl"><a href="../../tea/"><img src="../../images/greentealeaf.gif" width="45" height="45" alt="Just a green tea leaf" /></a></div>
 		<p>
-			<a href="http://validator.w3.org/check?uri=http%3A%2F%2Faltervisionmedia.com%2Fcontact%2Findex.php">XHTML</a>,
-			<a title="Validate" href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Faltervisionmedia.com%2Fdesign3.css&profile=css21&usermedium=all&warning=1">CSS</a>.
+			<a href="#">XHTML</a>,
+			<a title="Validate" href="#">CSS</a>.
 		</p>
 	</div>
 </center>
