--- a/contact/index.html
+++ b/contact/index.html
@@ -5,8 +5,6 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="../css/cform.css" />
-	<link rel="SHORTCUT ICON" type="image/x-icon" href="../favicon.ico" />
-	<link rel="alternate" type="application/rss+xml" title="RSS" href="../news/feed.xml" />
 </head>
 <body>
 <center>
@@ -53,11 +51,8 @@
 			<li><span>|</span></li>
 			<li><a href="#">Site Map</a></li>
 			<li><span>|</span></li>
-			<li><img class="ico" src="../images/ico_rss.gif" width="16" height="16" alt="" /><a href="#">RSS News Feed</a></li>
+			<li><img class="ico" src="../images/ico_rss.gif" width="16" height="16" alt="" /><a href="#">RSS</a></li>
 		</ul>
-		<p id="rc">
-			&copy; 2008 <a href="../">Altervision Media</a>. All rights reserved.
-		</p>
 		<p>
 			Valid <a href="#">XHTML</a>
 			<a href="#">CSS</a>
