--- a/works/index.html
+++ b/works/index.html
@@ -7,7 +7,6 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="../css/lightbox.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="../css/portfolio.css" />
 	<link rel="SHORTCUT ICON" type="image/x-icon" href="../favicon.ico" />
-	<link rel="alternate" type="application/rss+xml" title="RSS" href="../news/feed.xml" />
 	<script type="text/javascript" src="../scripts/popup.js"></script>
 	<script type="text/javascript" src="../scripts/lightbox.js"></script>
 </head>
@@ -54,8 +53,8 @@
 			<li><img class="ico" src="../images/ico_rss.gif" width="16" height="16" alt="" /><a href="#">RSS</a></li>
 		</ul>
 		<p>
-			<a href="http://validator.w3.org/check/referer">XHTML</a>,
-			<a title="Validate" href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>.
+			<a href="http://validator.w3.org/check/referer">XHTML</a>
+			<a title="Validate" href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>
 		</p>
 	</div>
 </center>
