--- a/works/all/index.html
+++ b/works/all/index.html
@@ -7,7 +7,6 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="../../css/lightbox.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="../../css/portfolio.css" />
 	<link rel="SHORTCUT ICON" type="image/x-icon" href="../../favicon.ico" />
-	<link rel="alternate" type="application/rss+xml" title="RSS" href="../../news/feed.xml" />
 	<script type="text/javascript" src="../../scripts/popup.js"></script>
 	<script type="text/javascript" src="../../scripts/toggle.js"></script>
 	<script type="text/javascript" src="../../scripts/lightbox.js"></script>
@@ -91,8 +90,8 @@
 			<li><img class="ico" src="../../images/ico_rss.gif" width="16" height="16" alt="" /><a href="#">RSS</a></li>
 		</ul>
 		<p>
-			<a href="#">XHTML</a>,
-			<a title="Validate" href="#">CSS</a>.
+			<a href="#">XHTML</a>
+			<a href="#">CSS</a>
 		</p>
 	</div>
 </center>
