--- a/contact/index.html
+++ b/contact/index.html
@@ -54,7 +54,7 @@
 			<li><img class="ico" src="../images/ico_rss.gif" width="16" height="16" alt="" /><a href="#">RSS</a></li>
 		</ul>
 		<p>
-			Valid <a href="#">XHTML</a>
+		 	<a href="#">XHTML</a>
 			<a href="#">CSS</a>
 		</p>
 	</div>
