--- a/services/index.html
+++ b/services/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
 	<title>Services</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
@@ -8,11 +7,8 @@
 	<link rel="SHORTCUT ICON" type="image/x-icon" href="../favicon.ico" />
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="news/feed.xml" />
 </head>
-
-
 <body>
 <center>
-
 	<div id="header">
 		<div id="logo">
 			<a href="../"><img src="../images/x.gif" width="219" height="139" alt="Altervision Media" /></a>
@@ -25,7 +21,6 @@
 			<li><a href="../contact/">Contact</a></li>
 		</ul>
 	</div>
-
 	<div id="content">
 		<h1>Services</h1>
 		<table id="indexn" cellpadding="0" cellspacing="0"><tr>
@@ -37,7 +32,7 @@
 					<li>CMS</li>
 				</ul>
 				<center>
-					<a class="planr" href="WebDesignPlanner.pdf"><img src="../images/planrwbdgn.png" width="180" height="44" alt="Web Design" /></a>
+					<a class="planr" href="#"><img src="../images/planrwbdgn.png" width="180" height="44" alt="Web Design" /></a>
 				</center>
 			</td>
 			<td class="divider"><img src="../images/x.gif" width="2" height="2" alt="" /></td>
@@ -49,7 +44,7 @@
 					<li>Style Guides</li>
 				</ul>	
 				<center>
-					<a class="planr" href="BrandingPlanner.pdf"><img src="../images/planrbrng.png" width="180" height="44" alt="Graphic Identity. Branding" /></a>
+					<a class="planr" href="#"><img src="../images/planrbrng.png" width="180" height="44" alt="Graphic Identity. Branding" /></a>
 				</center>
 			</td>
 			<td class="divider"><img src="../images/x.gif" width="2" height="2" alt="" /></td>
@@ -61,7 +56,7 @@
 					<li>Animation</li>
 				</ul>
 				<center>
-					<a class="planr" href="IllustrationPlanner.pdf"><img src="../images/planrarwk.png" width="180" height="44" alt="Illustration Artwork" /></a>
+					<a class="planr" href="#"><img src="../images/planrarwk.png" width="180" height="44" alt="Illustration Artwork" /></a>
 				</center>
 			</td>
 		</tr></table>
@@ -82,7 +77,6 @@
 			<a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>
 		</p>
 	</div>
-	
 </center>
 </body>
 </html>
