--- a/services/index.html
+++ b/services/index.html
@@ -73,8 +73,8 @@
 			<li><img class="ico" src="../images/ico_rss.gif" width="16" height="16" alt="RSS 2.0" /><a href="#">RSS</a></li>
 		</ul>
 		<p>
-			<a href="http://validator.w3.org/check/referer">XHTML</a>
-			<a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>
+			<a href="#">XHTML</a>
+			<a href="#">CSS</a>
 		</p>
 	</div>
 </center>
