--- a/works/all/index.html
+++ b/works/all/index.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="../../scripts/popup.js"></script>
 	<script type="text/javascript" src="../../scripts/toggle.js"></script>
 	<script type="text/javascript" src="../../scripts/lightbox.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 </head>
 <body>
 <center>
@@ -27,6 +28,15 @@
 			</ul>
 		</div>
 		<div id="content">
+			<script>
+				$(function () {
+    				var parent = $(".portfolio");
+			    	var divs = parent.children();
+			    	while (divs.length) {
+			        	parent.append(divs.splice(Math.floor(Math.random() * divs.length), 1)[0]);
+			    	}
+			});
+			</script>
 			<h1>Works</h1>
 			<table class="phead" cellpadding="0" cellspacing="0"><tr>
 				<td class="col1"><p>Websites</p></td>
