--- a/works/all/index.html
+++ b/works/all/index.html
@@ -30,7 +30,7 @@
 		<div id="content">
 			<script>
 				$(function () {
-    				var parent = $(".portfolio");
+    				var parent = $(".rand");
 			    	var divs = parent.children();
 			    	while (divs.length) {
 			        	parent.append(divs.splice(Math.floor(Math.random() * divs.length), 1)[0]);
@@ -42,7 +42,7 @@
 				<td class="col1"><p>Websites</p></td>
 				<td class="col2"><a style="display:none;" href="#all" onclick="toggle('toggle_websites')">View all</a></td>
 			</tr></table>
-			<div class="portfolio">
+			<div class="portfolio rand">
 				<div><a href="../websites/w_item_4.jpg" rel="lightbox"><img src="../websites/thumbs/w_thmb_1.gif" width="156" height="126" alt="" /></a></div>
 				<div><a href="../websites/w_item_7.jpg" rel="lightbox"><img src="../websites/thumbs/w_thmb_2.gif" width="156" height="126" alt="" /></a></div>
 				<div><a href="../websites/w_item_10.jpg" rel="lightbox"><img src="../websites/thumbs/w_thmb_3.gif" width="156" height="126" alt="" /></a></div>
@@ -65,7 +65,7 @@
 				<td class="col1"><p>Logos</p></td>
 				<td class="col2"><a href="#all" style="font-weight:bold;" onclick="toggle('toggle_logotypes')">View all</a></td>
 			</tr></table>
-			<div class="portfolio">
+			<div class="portfolio rand">
 				<div><img src="../logotypes/thumbs/img1.gif" width="156" height="126" alt="" /></div>
 				<div><img src="../logotypes/thumbs/img2.gif" width="156" height="126" alt="" /></div>
 				<div><img src="../logotypes/thumbs/img3.gif" width="156" height="126" alt="" /></div>
@@ -81,7 +81,7 @@
 			<table class="phead" cellpadding="0" cellspacing="0"><tr>
 				<td class="col1"><p>Stationery</p></td>
 			</tr></table>
-			<div class="portfolio">
+			<div class="portfolio rand">
 				<div><a href="../collateral/img2.jpg" rel="lightbox"><img src="../collateral/thumbs/img2.gif" width="156" height="126" alt="" /></a></div>
 				<div><img src="../collateral/thumbs/img1.gif" width="156" height="126" alt="" /></div>
 				<div><a href="../collateral/img1.jpg" rel="lightbox"><img src="../collateral/thumbs/img3.gif" width="156" height="126" alt="" /></a></div>
