--- a/works/all/index.html
+++ b/works/all/index.html
@@ -30,12 +30,12 @@
 		<div id="content">
 			<script>
 				$(function () {
-    				var parent1 = $(".rand1");
-			    	var divs1 = parent.children();
-			    	while (divs1.length) {
-			        	parent1.append(divs1.splice(Math.floor(Math.random() * divs1.length), 1)[0]);
-			    	}
-			});
+    					var parent1 = $(".rand1");
+			    		var divs1 = parent1.children();
+			    		while (divs1.length) {
+			        		parent1.append(divs1.splice(Math.floor(Math.random() * divs1.length), 1)[0]);
+			    		}
+				});
 			</script>
 			<h1>Works</h1>
 			<table class="phead" cellpadding="0" cellspacing="0"><tr>
