--- a/works/all/index.html
+++ b/works/all/index.html
@@ -28,6 +28,11 @@
 			</ul>
 		</div>
 		<div id="content">
+			<h1>Works</h1>
+			<table class="phead" cellpadding="0" cellspacing="0"><tr>
+				<td class="col1"><p>Websites</p></td>
+				<td class="col2"><a style="display:none;" href="#all" onclick="toggle('toggle_websites')">View all</a></td>
+			</tr></table>
 			<script>
 				$(function () {
     					var parent1 = $(".rand1");
@@ -36,13 +41,8 @@
 			        		parent1.append(divs1.splice(Math.floor(Math.random() * divs1.length), 1)[0]);
 			    		}
 				});
-			</script>
-			<h1>Works</h1>
-			<table class="phead" cellpadding="0" cellspacing="0"><tr>
-				<td class="col1"><p>Websites</p></td>
-				<td class="col2"><a style="display:none;" href="#all" onclick="toggle('toggle_websites')">View all</a></td>
-			</tr></table>
-			<div class="portfolio rand">
+			</script>			
+			<div class="portfolio rand1">
 				<div><a href="../websites/w_item_4.jpg" rel="lightbox"><img src="../websites/thumbs/w_thmb_1.gif" width="156" height="126" alt="" /></a></div>
 				<div><a href="../websites/w_item_7.jpg" rel="lightbox"><img src="../websites/thumbs/w_thmb_2.gif" width="156" height="126" alt="" /></a></div>
 				<div><a href="../websites/w_item_10.jpg" rel="lightbox"><img src="../websites/thumbs/w_thmb_3.gif" width="156" height="126" alt="" /></a></div>
