--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Altervision Media &mdash; Web Design</title>
+	<title>Web Design Studio</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 	<link rel="SHORTCUT ICON" type="image/x-icon" href="favicon.ico" />
@@ -21,7 +21,7 @@
 		</ul>
 	</div>
 	<div id="content">
-		<h1>Web Design and Graphic Design</h1>
+		<h1>Web Development and Design</h1>
 		<table id="index" cellpadding="0" cellspacing="0"><tr>
 			<td id="websites" width="50%">
 				<img class="title" src="images/wemakewebsites.gif" width="262" height="30" alt="We make websites" />
