--- a/works/index.html
+++ b/works/index.html
@@ -46,7 +46,7 @@
 			<div><a href="websites/w_item_8.jpg" rel="lightbox"><img src="websites/thumbs/w_thmb_12.gif"/></a></div>
 			<div><a href="websites/w_item_9.jpg" rel="lightbox"><img src="websites/thumbs/w_thmb_13.gif"/></a></div>
 			<div><a href="websites/w_item_16.jpg" rel="lightbox"><img src="websites/thumbs/w_thmb_16.gif"/></a></div>
-			<div><a href="collateral/c_item_1.jpg" rel="lightbox"><img src="collateral/thumbs/img3.gif"/></a></div>
+			<div><a href="collateral/img1.jpg" rel="lightbox"><img src="collateral/thumbs/img3.gif"/></a></div>
 			<div><a href="websites/w_item_7.jpg" rel="lightbox"><img src="websites/thumbs/w_thmb_2.gif"/></a></div>
 			<div><a href="websites/w_item_12.jpg" rel="lightbox"><img src="websites/thumbs/w_thmb_8.gif"/></a></div>
 		</div><br style="clear:both; padding-bottom:20px"/><br/><br/>
